--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="card">
       <h1>脱出ゲーム 正誤判定</h1>
       <div class="row">
-        <input id="answer" type="text" placeholder="キーワードを入力…（例：マクロ）"/>
+        <input id="answer" type="text" placeholder="キーワードを入力…"/>
         <button id="judgeBtn">判定</button>
       </div>
       <div id="result" class="msg" aria-live="polite"></div>
