--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>脱出ゲーム 正誤判定</title>
+<title>脱出ゲーム なぞは解けた？</title>
 <style>
   :root{ --panel:rgba(255,255,255,.06); --border:rgba(255,255,255,.12);
          --ok:#34d399; --ng:#f87171; }
