--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <!-- UI -->
   <div class="grid">
     <div class="card">
-      <h1>脱出ゲーム 正誤判定</h1>
+      <h1>脱出ゲーム なぞは解けた？</h1>
       <div class="row">
         <input id="answer" type="text" placeholder="キーワードを入力…"/>
         <button id="judgeBtn">判定</button>
